
2022-01-04  Ron Norman <rjn@inglenet.com>

	* codegen.c: Accept INDEXED file with PRIMARY KEY DUPLICATEs
	* parser.y: Warn if PRIMARY KEY WITH DUPLICATES and using BDB/OCI/ODBC

2021-12-30  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix handling of RESET ON phrase

2021-12-29  Ron Norman <rjn@inglenet.com>

	* parser.y: Save CONTROL FINAL fields
	* codegen.c: Emit CONTROL FINAL fields to cob_report

2021-12-25  Ron Norman <rjn@inglenet.com>

	* parser.y: Fix to check for missing REPORT data clauses
	* codegen.c: Handle report field with SOURCE "literal"
	* field.c:	Compute report field size for SOURCE "literal"
	* tree.c:	Check for report field missing PIC when using SUM clause

2021-12-23  Ron Norman <rjn@inglenet.com>

	* parser.y: Interim Changes to handle multiple VARYING clauses
				for a REPORT (More to come)
	* codegen.c: Handle report VARYING clause as a list
	* field.c:  Allow multiple VALUES when in REPORT section 

2021-12-18  Ron Norman <rjn@inglenet.com>

	* tree.h: Add extern cobc_in_data_division
	* tree.c: Clear cobc_in_data_division 
	* scanner.l: Check for typedef variable and return TYPEDEF_NAME
	* parser.y: Changes to look for TYPEDEF_NAME

2021-12-08  Ron Norman <rjn@inglenet.com>

	* codegen.c: When setting value into COMP-X field use cob_set_compx

2021-11-26  Ron Norman <rjn@inglenet.com>

	* field.c: More checks for USAGE on a group and if compatible
			with the elementary data field description

2021-11-18  Ron Norman <rjn@inglenet.com>

	* field.c: More work for OCCURS with multiple VALUES
	* codegen.c: More work for initialize of OCCURS with multiple VALUES

2021-11-15  Ron Norman <rjn@inglenet.com>

	* field.c (validate_elem_value): Accept multi VALUES for simple OCCURS
	* tree.h: Add flag_occurs_values to cb_field
	* codegen.c: Handle initialize of OCCURS with multiple VALUES

2021-11-14  Ron Norman <rjn@inglenet.com>

	* reserved.c: Add bit-wise words B-AND, B-NOT, B-OR, B-SHIFT-L, B-SHIFT-R
				B-XOR, B-SHIFT-LC, B-SHIFT-RC